k8s/base/mealplan/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealplan-backend
  labels:
    app.kubernetes.io/name: mealplan-backend
    app.kubernetes.io/part-of: pep-mealplan
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mealplan-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealplan-backend
        app.kubernetes.io/part-of: pep-mealplan
    spec:
      containers:
        - name: backend
          image: ghcr.io/2425-4chif-syp/01-projekte-2025-4chif-syp-pepper-minigames/mealplan-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 20
            timeoutSeconds: 5
