k8s/base/mealplan/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealplan-frontend
  labels:
    app.kubernetes.io/name: mealplan-frontend
    app.kubernetes.io/part-of: pep-mealplan
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mealplan-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealplan-frontend
        app.kubernetes.io/part-of: pep-mealplan
    spec:
      containers:
        - name: frontend
          image: ghcr.io/2425-4chif-syp/01-projekte-2025-4chif-syp-pepper-minigames/mealplan-frontend-leocloud:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 20
            timeoutSeconds: 5
