k8s/base/mealplan/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealplan-backend
  labels:
    app.kubernetes.io/name: mealplan-backend
    app.kubernetes.io/part-of: pep-mealplan
spec:
  selector:
    app.kubernetes.io/name: mealplan-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
