k8s/base/mealplan/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealplan-frontend
  labels:
    app.kubernetes.io/name: mealplan-frontend
    app.kubernetes.io/part-of: pep-mealplan
spec:
  selector:
    app.kubernetes.io/name: mealplan-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
