k8s/base/mealplan/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealplan-postgres
  labels:
    app.kubernetes.io/name: mealplan-postgres
    app.kubernetes.io/part-of: pep-mealplan
spec:
  selector:
    app.kubernetes.io/name: mealplan-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
