k8s/base/mealplan/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealplan
  labels:
    app.kubernetes.io/name: mealplan
    app.kubernetes.io/part-of: pep-mealplan
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mealplan-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealplan-frontend
                port:
                  number: 80
